Adds logical and

--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
 			myColor = "yellow";
 		}
 
+	if(myHours >= 5 && myHours <12){
+		alert('morning');
+	}else{
+		alert('NOT morning');
+	}	
+	
+
+
+
 		document.getElementById('mydiv').innerHTML = myGreeting;
 		document.body.style.backgroundColor = myColor;
 	</script>
