Changed color, pictures, etc.

--- a/index.html
+++ b/index.html
@@ -71,14 +71,11 @@
     <main>
 	 <header><h3>An IT 121 assignment by Aven Zemo</h3></header>
 	 <div id="mydiv">Greeting goes here</div>
-	 <p>This HTML5 Flexible template could be a good starting point for some of your projects.  The template file starts by setting a background color on the HTML element, and setting max-width on the body, which is styled like a wrapper.  The BODY element is also set to a percentage width so it leaves a bit of HTML color until it shrinks in size toward the mobile view.</p>
-	 <p>There is an image with a class of FLEXIBLE which is set to a max-width equal to the size of the image.  Simutaneously the class sets the image to a percentage width, allowing the image to flex in size.  The height is not changed, as this would skew the image.</p>
-	 <p>The LIST elements inside the NAV are displayed inline by setting the display to be inline-block.  Bullets are removed by setting the UL to display</p>
-	 <p>The FOOTER includes a clear:both to keep everything above it!</p>
-	  <img src="http://dummyimage.com/300x400" alt="Picture of Me!" class="flexible" />
+	 <p>Remember Time is relative!</p>
+	  <img src="images/evening.jpg" alt="time of day pic" id="mypic" class=flexible />
      </main>
     <footer>
-      <small>&copy; 2013, All Rights Reserved ~
+      <small>&copy; 2021, All Rights Reserved ~
       <a href="https://validator.w3.org/check/referer" target="_blank">Valid HTML</a> ~
       <a href="https://jigsaw.w3.org/css-validator/check?uri=referer" target="_blank">Valid CSS</a>
       </small>
@@ -89,17 +86,26 @@
 		let myHours = myDate.getHours();
 		let myGreeting = '';
 		let myColor = '';
+		let myPic = "images/";
 
-		if (myHours > 12){
-			myGreeting = "Goodd Afternoon!";
-			myColor = "orange";
-		}else{
-			myGreeting = "Good Morning?";
-			myColor = "yellow";
-		}
+	
 
 	if(myHours >= 5 && myHours <12){
-		alert('morning');
+		myGreeting = "Rise & Shine";
+		myColor = "pink";
+		myPic += "morning.jpg";
+	} else if(myHours >= 12 && myHours <18){
+		myGreeting = "Fine Day";
+		myColor = "red";
+		myPic += "afternoon.jpg";
+	} else if(myHours >= 18 && myHours <23){
+		myGreeting = "Supper Time";
+		myColor = "purple";
+		myPic += "evening.jpg";
+	} else if(myHours >= 23 && myHours <5){
+		myGreeting = "Slumber";
+		myColor = "black";
+		myPic += "night.jpg";
 	}else{
 		alert('NOT morning');
 	}	
@@ -109,6 +115,7 @@
 
 		document.getElementById('mydiv').innerHTML = myGreeting;
 		document.body.style.backgroundColor = myColor;
+		document.getElementById("mypic").src = myPic;
 	</script>
 </body>
 </html>
